# Shopping_Guidance_Agent

./: .dockerignore  .gitignore  README.md  docker-compose.sandbox.yml  skills-lock.json
client/: Package.swift  (+2 more)
server/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
server/app/: config.py  main.py
server/app/agent/: card_extractor.py  clarify_detector.py  compare_planner.py  intent.py  memory.py  memory_summarizer.py  multimodal_branch.py  orchestrator.py  prompts.py  query_rewriter.py
server/app/api/: audio.py  chat.py  deps.py  products.py  upload.py
server/app/audio/: __init__.py  ark_audio_client.py
server/app/db/: init_db.py  mysql_models.py  mysql_session.py  product_repo.py
server/app/llm/: doubao_client.py
server/app/rag/: chunker.py  embedder.py  image_embed_cache.py  milvus_store.py  retriever.py  structured_retriever.py
server/app/schemas/: chat.py  product.py
server/app/utils/: logger.py
server/scripts/: build_image_index.py  build_index.py  eval_image_search.py  eval_recall.py  seed_mysql.py  smoke_chat.sh  smoke_image_chat.sh
server/tests/: test_api_chat.py  test_audio_api.py  test_card_extractor.py  test_chunker.py  test_clarify_detector.py  test_compare_planner.py  test_doubao_client.py  test_embedder.py  test_eval_image_search.py  test_image_embed_cache.py  test_intent.py  test_memory.py  test_memory_summarizer.py  test_multimodal_branch.py  test_orchestrator.py  test_product_repo.py  test_prompts.py  test_query_rewriter.py  test_retriever.py  test_smoke.py  test_structured_retriever.py  test_upload_api.py
(+54 files in other folders)
